# piholeclient

./: LICENSE  README.md  setup.cfg
piholeclient/: controllers.py  models.py
pyclient/: DomainItem.py  ListType.py  Pyhole.py  YouTubeRule.py
src/piholeclient/: controllers.py  models.py
test/: PyholeTest.py  test.py
