[metadata]
name = py-hole
version = 0.0.1
author = Aaron Hoffer
author_email = github@hoffer.org
description = Example Python client for Pi-hole
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahoffer/py-hole
project_urls =
    Bug Tracker = https://github.com/ahoffer/py-hole/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyclient
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src