[metadata]
name = piholeclient-ahoffer
version = 0.1.2
author = Aaron Hoffer
author_email = github@hoffer.org
description = Example Python client for Pi-hole
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahoffer/pyhole
project_urls =
    Bug Tracker = https://github.com/ahoffer/py-hole/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src