[metadata]
name = piholeclient
version = 0.1.4
author = Aaron Hoffer
author_email = github@hoffer.org
description = Example Python client for Pi-hole
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahoffer/piholeclient
project_urls =
    Bug Tracker = https://github.com/ahoffer/piholeclient/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .